Dashboards
Projects
Issues
Give feedback to Atlassian
Help
Jira Core help
Keyboard Shortcuts
About Jira
Jira Credits
Log In
Core ReactOS
CORE-11166
NtCreateSection does not handle empty files correctly
Log In
Export
XML
Word
Printable
Details
Type:
Bug
Status:
Resolved
Priority:
Major
Resolution:
Fixed
Fix Version/s:
0.4.2
Component/s:
None
Labels:
PATCH
Module:
mm
Sprint:
May 2016
Description
NtCreateSection should return
STATUS_MAPPED_FILE_SIZE_ZERO
in that case.
Attachments
Options
Sort By Name
Sort By Date
Ascending
Descending
Thumbnails
List
Download All
Attachments
NtMapViewOfSection.patch
2 kB
2016-05-03 22:00
NtMapViewOfSection.patch
2 kB
2016-05-03 21:28
Activity
People
Assignee:
Mark Jansen
Reporter:
Mark Jansen
Votes:
0
Vote for this issue
Watchers:
1
Start watching this issue
Dates
Created:
2016-05-03 21:28
Updated:
2016-05-05 12:07
Resolved:
2016-05-05 12:07